--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Ceevee - Free Responsive HTML5/CSS3 Template</title>
+	<title>Mirza Faisal Baig</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -56,9 +56,8 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">I'm Jonathan Doe.</h1>
-            <h3>I'm a Manila based <span>graphic designer</span>, <span>illustrator</span> and <span>webdesigner</span> creating awesome and
-            effective visual identities for companies of all sizes around the globe. Let's <a class="smoothscroll" href="#about">start scrolling</a>
+            <h1 class="responsive-headline">I'm Mirza Faisal Baig.</h1>
+            <h3>I'm a Delhi based <span>Software Developer</span> creating awesome mobile applications for companies of all sizes around the globe. Let's <a class="smoothscroll" href="#about">start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
@@ -88,7 +87,7 @@
 
          <div class="three columns">
 
-            <img class="profile-pic"  src="images/profilepic.jpg" alt="" />
+            <img class="profile-pic"  src="images/profile-image.jpg" alt="" />
 
          </div>
 
@@ -110,12 +109,13 @@
 
                   <h2>Contact Details</h2>
                   <p class="address">
-						   <span>Jonathan Doe</span><br>
-						   <span>1600 Amphitheatre Parkway<br>
-						         Mountain View, CA 94043 US
+						   <span>Mirza Faisal Baig</span><br>
+						   <span>P-186, Street No. - 10<br>
+						         Bihari Colony, Shahadra<br>
+                                 Delhi-110031, India
                      </span><br>
-						   <span>(123)456-7890</span><br>
-                     <span>anyone@website.com</span>
+						   <span>+91-9999865863</span><br>
+                     <span>faisalmirza9695@gmail.com</span>
 					   </p>
 
                </div>
