Update html file

--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
-               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
+               <!-- <li><a href="#"><i class="fa fa-facebook"></i></a></li> -->
+               <li><a href="https://twitter.com/faisalmirza9695"><i class="fa fa-twitter"></i></a></li>
+               <!-- <li><a href="#"><i class="fa fa-google-plus"></i></a></li> -->
+               <li><a href="https://www.linkedin.com/in/mirza-faisal-baig-935b90aa"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://www.instagram.com/m_f_mirza"><i class="fa fa-instagram"></i></a></li>
+               <!-- <li><a href="#"><i class="fa fa-dribbble"></i></a></li> -->
+               <li><a href="https://join.skype.com/invite/j931zJVSOIbC"><i class="fa fa-skype"></i></a></li>
             </ul>
          </div>
       </div>
@@ -737,10 +737,11 @@
 
 					   <h4>Address and Phone</h4>
 					   <p class="address">
-						   Jonathan Doe<br>
-						   1600 Amphitheatre Parkway <br>
-						   Mountain View, CA 94043 US<br>
-						   <span>(123) 456-7890</span>
+						   Mirza Faisal Baig<br>
+						   P-186, Street No. - 10 <br>
+						   Bihari Colony, Shahadra<br>
+                           Delhi-110031, India<br>
+						   <span>+91-99998658630</span>
 					   </p>
 
 				   </div>
