--- a/index.html
+++ b/index.html
@@ -787,13 +787,13 @@
          <div class="twelve columns">
 
             <ul class="social-links">
-               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
+               <!-- <li><a href="#"><i class="fa fa-facebook"></i></a></li> -->
+               <li><a href="https://twitter.com/faisalmirza9695"><i class="fa fa-twitter"></i></a></li>
+               <!-- <li><a href="#"><i class="fa fa-google-plus"></i></a></li> -->
+               <li><a href="https://www.linkedin.com/in/mirza-faisal-baig-935b90aa"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://www.instagram.com/m_f_mirza"><i class="fa fa-instagram"></i></a></li>
+               <!-- <li><a href="#"><i class="fa fa-dribbble"></i></a></li> -->
+               <li><a href="https://join.skype.com/invite/j931zJVSOIbC"><i class="fa fa-skype"></i></a></li>
             </ul>
 
             <ul class="copyright">
