--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
          <ul id="nav" class="nav">
             <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
             <li><a class="smoothscroll" href="#about">About</a></li>
-	         <li><a class="smoothscroll" href="#resume">Resume</a></li>
-            <li><a class="smoothscroll" href="#portfolio">Works</a></li>
-            <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
+	        <li><a class="smoothscroll" href="#resume">Experiance</a></li>
+            <li><a class="smoothscroll" href="#portfolio">Work</a></li>
+            <!-- <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li> -->
             <li><a class="smoothscroll" href="#contact">Contact</a></li>
          </ul> <!-- end #nav -->
 
@@ -95,12 +95,12 @@
 
             <h2>About Me</h2>
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
-            sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
+            <p>I am an enthusiastic and professional Android Developer with an experience of 5+ years, which has enjoyed being
+part of successful productive teams. I am quick to grasp new concepts and ideas and develop innovative and creative
+solutions to problems
+            </p>
+            <p>I am eager to constantly learn new things. At the moment, my focus is on the Kotlin, Android Jetpack libraries, 
+            architectural patterns on Android (Clean, MVVM, etc.) and of course I am always up for trying out the newest Android libraries.
             </p>
 
             <div class="row">
@@ -110,21 +110,21 @@
                   <h2>Contact Details</h2>
                   <p class="address">
 						   <span>Mirza Faisal Baig</span><br>
-						   <span>P-186, Street No. - 10<br>
+						   <!-- <span>P-186, Street No. - 10<br>
 						         Bihari Colony, Shahadra<br>
                                  Delhi-110031, India
-                     </span><br>
+                     </span><br> -->
 						   <span>+91-9999865863</span><br>
                      <span>faisalmirza9695@gmail.com</span>
 					   </p>
 
                </div>
 
-               <div class="columns download">
+               <!-- <div class="columns download">
                   <p>
                      <a href="#" class="button"><i class="fa fa-download"></i>Download Resume</a>
                   </p>
-               </div>
+               </div> -->
 
             </div> <!-- end row -->
 
@@ -141,15 +141,15 @@
 
       <!-- Education
       ----------------------------------------------- -->
-      <div class="row education">
+      <!-- <div class="row education">
 
          <div class="three columns header-col">
             <h1><span>Education</span></h1>
          </div>
 
-         <div class="nine columns main-col">
+         <div class="nine columns main-col"> -->
 
-            <div class="row item">
+            <!-- <div class="row item">
 
                <div class="twelve columns">
 
@@ -165,9 +165,9 @@
 
                </div>
 
-            </div> <!-- item end -->
+            </div> --> <!-- item end -->
 
-            <div class="row item">
+            <!-- <div class="row item">
 
                <div class="twelve columns">
 
@@ -183,11 +183,11 @@
 
                </div>
 
-            </div> <!-- item end -->
+            </div> --> <!-- item end -->
 
-         </div> <!-- main-col end -->
+         <!-- </div> --> <!-- main-col end -->
 
-      </div> <!-- End Education -->
+      <!-- </div> --> <!-- End Education -->
 
 
       <!-- Work
@@ -195,7 +195,7 @@
       <div class="row work">
 
          <div class="three columns header-col">
-            <h1><span>Work</span></h1>
+            <h1><span>Experiance</span></h1>
          </div>
 
          <div class="nine columns main-col">
@@ -204,8 +204,8 @@
 
                <div class="twelve columns">
 
-                  <h3>Awesome Design Studio</h3>
-                  <p class="info">Senior UX Designer <span>&bull;</span> <em class="date">March 2010 - Present</em></p>
+                  <h3>Skuad Pte Ltd</h3>
+                  <p class="info">Senior Android Developer <span>&bull;</span> <em class="date">January 2020 - Present</em></p>
 
                   <p>
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
@@ -222,8 +222,8 @@
 
                <div class="twelve columns">
 
-                  <h3>Super Cool Studio</h3>
-                  <p class="info">UX Designer <span>&bull;</span> <em class="date">March 2007 - February 2010</em></p>
+                  <h3>App Street Software Pvt. Ltd.</h3>
+                  <p class="info">Senior Android Developer <span>&bull;</span> <em class="date">April 2019 - January 2020</em></p>
 
                   <p>
                   This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
@@ -236,6 +236,33 @@
 
             </div> <!-- item end -->
 
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>Vinove Software and Services Pvt. Ltd.</h3>
+                  <p class="info">Android Developer <span>&bull;</span> <em class="date">July 2015 - January 2019</em></p>
+
+                  <p>
+                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
+                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
+                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
+                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
+                  </p>
+
+
+                  <p class="info">Software Developer Tranee <span>&bull;</span> <em class="date">January 2015 - July 2015</em></p>
+
+                  <p>
+                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
+                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
+                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
+                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
+                  </p>
+               </div>
+
+            </div> <!-- item end -->
+
          </div> <!-- main-col end -->
 
       </div> <!-- End Work -->
@@ -243,7 +270,7 @@
 
       <!-- Skills
       ----------------------------------------------- -->
-      <div class="row skill">
+      <!-- <div class="row skill">
 
          <div class="three columns header-col">
             <h1><span>Skills</span></h1>
@@ -268,11 +295,11 @@
                   <li><span class="bar-expand jquery"></span><em>jQuery</em></li>
 					</ul>
 
-				</div><!-- end skill-bars -->
+				</div> --><!-- end skill-bars -->
 
-			</div> <!-- main-col end -->
+			<!-- </div> --> <!-- main-col end -->
 
-      </div> <!-- End skills -->
+      <!-- </div> --> <!-- End skills -->
 
    </section> <!-- Resume Section End-->
 
@@ -578,7 +605,7 @@
 
    <!-- Call-To-Action Section
    ================================================== -->
-   <section id="call-to-action">
+   <!-- <section id="call-to-action">
 
       <div class="row">
 
@@ -604,12 +631,12 @@
 
       </div>
 
-   </section> <!-- Call-To-Action Section End-->
+   </section> --> <!-- Call-To-Action Section End-->
 
 
    <!-- Testimonials Section
    ================================================== -->
-   <section id="testimonials">
+   <!-- <section id="testimonials">
 
       <div class="text-container">
 
@@ -635,9 +662,9 @@
                            </p>
                            <cite>Steve Jobs</cite>
                         </blockquote>
-                     </li> <!-- slide ends -->
+                     </li> --> <!-- slide ends -->
 
-                     <li>
+                     <!-- <li>
                         <blockquote>
                            <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
                            Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
@@ -645,19 +672,19 @@
                            </p>
                            <cite>Mr. Adobe</cite>
                         </blockquote>
-                     </li> <!-- slide ends -->
+                     </li> --> <!-- slide ends -->
 
-                  </ul>
+                  <!-- </ul> -->
 
-               </div> <!-- div.flexslider ends -->
+               <!-- </div> --> <!-- div.flexslider ends -->
 
-            </div> <!-- div.flex-container ends -->
+            <!-- </div> --> <!-- div.flex-container ends -->
 
-         </div> <!-- row ends -->
+         <!-- </div> --> <!-- row ends -->
 
-       </div>  <!-- text-container ends -->
+       <!-- </div>  --> <!-- text-container ends -->
 
-   </section> <!-- Testimonials Section End-->
+   <!-- </section> --> <!-- Testimonials Section End-->
 
 
    <!-- Contact Section
@@ -674,9 +701,13 @@
 
             <div class="ten columns">
 
-                  <p class="lead">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
+                  <p class="lead">
+                    Please use this form to contact me or you can send me a direct mail on this mail id faisalmirza9695@gmail.com
+                    <br>
+                    I’ll get back to you as soon as I see it. 
+                  <!-- Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
                   eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-                  voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+                  voluptatem quia voluptas sit aspernatur aut odit aut fugit. -->
                   </p>
 
             </div>
@@ -746,7 +777,7 @@
 
 				   </div>
 
-               <div class="widget widget_tweets">
+               <!-- <div class="widget widget_tweets">
 
                   <h4 class="widget-title">Latest Tweets</h4>
 
@@ -769,7 +800,7 @@
                      </li>
                   </ul>
 
-		         </div>
+		         </div> -->
 
             </aside>
 
@@ -797,7 +828,7 @@
             </ul>
 
             <ul class="copyright">
-               <li>&copy; Copyright 2014 CeeVee</li>
+               <li>&copy; Copyright 2020 Mirza Faisal Baig</li>
                <li>Design by <a href="http://www.styleshout.com/" title="Styleshout" target="_blank">Styleshout</a></li>   
             </ul>
 
